--- a/resources/src/sass/_navbar.scss
+++ b/resources/src/sass/_navbar.scss
@@ -1,6 +1,4 @@
 .site-header {
-	// background: blue;
-	min-height: 5rem;
 	font-family: $font-brand;
 	position: fixed;
 	background: $white;
